# PURS-PUFp-PUGraph

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: README.md
data/testing/: common_polymer_cases.csv  opecm_osc_parent.csv  opecm_paper54_tasks.csv  opecm_paper_tables_summary.json  opecm_pce_cases.csv  opecm_ue_cases.csv  opecm_uh_cases.csv
docs/: architecture.md  changelog.md  dataset_registry.md  graph_workflow.md  migration.md  osc_parent_schema.md  overview_zh.md  package_architecture_zh.md  package_quickstart_zh.md  package_release_validation.md  paper_reproduction_matrix.md  publish_status.md  release_checklist.md  reproduction_zh.md  schema.md  smoke_test.md  stability.md  testing_datasets.md
environments/: environment-all.yml  environment-core.yml  environment-graph.yml  environment-ml.yml
examples/: README.md
examples/basic_recognition/: README.md
examples/opecm_demo/: README.md  input.csv
examples/opecm_standard_demo/: README.md
examples/pufp_mobility_demo/: README.md  input.csv
examples/pufp_opv_demo/: README.md  input.csv
examples/pugraph_demo/: README.md  config.yaml  input.csv
repro/acsami_2023_pufp/: README.md
repro/jctc_2024_pugraph/: README.md
repro/npj_2025_opv/: README.md
scripts/: build_osc_paper_tables.py  legacy_get_polymer_unit.py  legacy_polymer_unit_classify.py  refresh_demo_datasets.py  run_feature_fusion_baseline.py  run_opecm_osc_unified_example.py  run_paper54_classification_baseline.py  run_smoke_release.py
src/purs/: __init__.py  cli.py
tests/: __init__.py  test_cli.py  test_osc_tasks.py  test_workflows.py
tests/fixtures/: duplicate_names.csv  invalid_smiles.csv  mobility_tiny.csv  (+3 more)
(+45 files in other folders)
